--- a/index.html
+++ b/index.html
@@ -18,3 +18,4 @@ render_farbfeld(imagepicture,"c");
 <a href="demo_clear2ff.html">Clear2FF</a><br/>
 <a href="demo_paperbackground.html">Paper Background</a><br/>
 <a href="demo_ff2transparency.html">FF2Transparency</a><br/>
+<a href="demo_ff2likesilicon.html">FF2LikeSilicon</a><br/>
