--- a/demo_ff2likesilicon.html
+++ b/demo_ff2likesilicon.html
@@ -1,6 +1,7 @@
 <script src="farbfeld_mod.js"></script>
 <script src="exemples_two.js"></script>
 <h2>FF2LikeSilicon</h2>
+<i><a href="https://fr.wikipedia.org/wiki/Fichier:NXP_PCF8577C_LCD_driver_with_I%C2%B2C_(Colour_Corrected).jpg">Source</a></i><br/>
 <canvas id="icimg" width=369 height=320></canvas><br/>
 <script>
 render_farbfeld_ff2likesilicon(icimg,"icimg");
