--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ render_farbfeld(imagepicture,"c");
 <a href="exemples_effects.html"><b>The Effects</b></a><br/>
 <a href="demo_ff2clear.html">FF2Clear</a><br/>
 <a href="demo_clear2ff.html">Clear2FF</a><br/>
+<a href="demo_ff2less.html">FF2Less</a><br/>
 <a href="demo_paperbackground.html">Paper Background</a><br/>
 <a href="demo_ff2transparency.html">FF2Transparency</a><br/>
 <a href="demo_ff2likesilicon.html">FF2LikeSilicon</a><br/>
