add Theta Lumineux

--- a/exemples_effects.html
+++ b/exemples_effects.html
@@ -43,6 +43,8 @@ Uniform Color<br/>
 <canvas id="uni" width=400 height=265></canvas><br/>
 Depth Map<br/>
 <canvas id="dep" width=400 height=265></canvas><br/>
+Theta Lumineux<br/>
+<canvas id="tht" width=400 height=265></canvas><br/>
 <script>
 render_farbfeld_coloreffectreplacer(imagepicture,"add","add",[60,0,0]);
 render_farbfeld_coloreffectreplacer(imagepicture,"sub","sub",[100,100,100]);
@@ -65,4 +67,5 @@ render_farbfeld_coloreffectreplacer(imagepicture,"rnd","rnd",["ffffff",160]);
 render_farbfeld_coloreffectreplacer(imagepicture,"dpr","dpr",[205,0,255,255]);
 render_farbfeld_coloreffectreplacer(imagepicture,"uni","uni",["fa1200"]);
 render_farbfeld_coloreffectreplacer(imagepicture,"dep","dep",["ffffff","000000"]);
+render_farbfeld_coloreffectreplacer(imagepicture,"tht","tht",[1.6,1.4,1.2]);
 </script>
